maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:2: error: Missing closing brace `}' assumed here
var sommeAngle=0;
^Escaper:2: error: expected class or object definition
var sommeAngle=0;
^Escaper:3: error: expected class or object definition
var nordActif=true;
^Escaper:4: error: expected start of definition
override def run() {
         ^Escaper:12: error: expected class or object definition
def keepHandOnSideWall()
^Escaper:13: error: expected class or object definition
{
^